--- a/visual/original/stakerholders_add.htm
+++ b/visual/original/stakerholders_add.htm
@@ -37,7 +37,7 @@
 <div {$header_chiddenattr} data-pageid="{$pageid}" data-container="header" class="   col-md-9 col-md-offset-3"> 
 
 {BEGIN addheader}
-	<h2 {$addheader_hiddenattr} data-pageid="{$pageid}" data-brick="addheader" >{$pagetitlelabel events add}</h2>
+	<h2 {$addheader_hiddenattr} data-pageid="{$pageid}" data-brick="addheader" >{$pagetitlelabel stakerholders add}</h2>
 
 {END addheader}
 
@@ -95,95 +95,77 @@
 
 
 <div {$addfields_hiddenattr} data-pageid="{$pageid}" data-brick="addfields" class="form-horizontal" role="form">
-			{BEGIN event_project_fieldblock}
+			{BEGIN stakeholder_name_fieldblock}
 <div class=container>
-<div class="form-group" data-fieldname="event_project" data-signal-error-for="event_project{$id}" >
-	<label class="col-md-3 control-label" for="{$labelfor_event_project}">
-		{BEGIN event_project_label}{$label events event_project}{END event_project_label}
+<div class="form-group" data-fieldname="stakeholder_name" data-signal-error-for="stakeholder_name{$id}" >
+	<label class="col-md-3 control-label" for="{$labelfor_stakeholder_name}">
+		{BEGIN stakeholder_name_label}{$label stakerholders stakeholder_name}{END stakeholder_name_label}
 	</label>
 	<div class="col-md-6" >
-		{$event_project_editcontrol}
+		{$stakeholder_name_editcontrol}
 	</div>
-	<div class="col-md-3 help-block" data-helpfor="event_project">
+	<div class="col-md-3 help-block" data-helpfor="stakeholder_name">
 		<div class="text-muted" >
-		{$tooltip events event_project}
+		{$tooltip stakerholders stakeholder_name}
 		</div>
 	</div>
 </div>
 </div>
-{END event_project_fieldblock}
+{END stakeholder_name_fieldblock}
 
-			{BEGIN event_add_date_fieldblock}
+			{BEGIN stakeholder_email_fieldblock}
 <div class=container>
-<div class="form-group" data-fieldname="event_add_date" data-signal-error-for="event_add_date{$id}" >
-	<label class="col-md-3 control-label" for="{$labelfor_event_add_date}">
-		{BEGIN event_add_date_label}{$label events event_add_date}{END event_add_date_label}
+<div class="form-group" data-fieldname="stakeholder_email" data-signal-error-for="stakeholder_email{$id}" >
+	<label class="col-md-3 control-label" for="{$labelfor_stakeholder_email}">
+		{BEGIN stakeholder_email_label}{$label stakerholders stakeholder_email}{END stakeholder_email_label}
 	</label>
 	<div class="col-md-6" >
-		{$event_add_date_editcontrol}
+		{$stakeholder_email_editcontrol}
 	</div>
-	<div class="col-md-3 help-block" data-helpfor="event_add_date">
+	<div class="col-md-3 help-block" data-helpfor="stakeholder_email">
 		<div class="text-muted" >
-		{$tooltip events event_add_date}
+		{$tooltip stakerholders stakeholder_email}
 		</div>
 	</div>
 </div>
 </div>
-{END event_add_date_fieldblock}
+{END stakeholder_email_fieldblock}
 
-			{BEGIN event_subject_fieldblock}
+			{BEGIN stakeholder_obs_fieldblock}
 <div class=container>
-<div class="form-group" data-fieldname="event_subject" data-signal-error-for="event_subject{$id}" >
-	<label class="col-md-3 control-label" for="{$labelfor_event_subject}">
-		{BEGIN event_subject_label}{$label events event_subject}{END event_subject_label}
+<div class="form-group" data-fieldname="stakeholder_obs" data-signal-error-for="stakeholder_obs{$id}" >
+	<label class="col-md-3 control-label" for="{$labelfor_stakeholder_obs}">
+		{BEGIN stakeholder_obs_label}{$label stakerholders stakeholder_obs}{END stakeholder_obs_label}
 	</label>
 	<div class="col-md-6" >
-		{$event_subject_editcontrol}
+		{$stakeholder_obs_editcontrol}
 	</div>
-	<div class="col-md-3 help-block" data-helpfor="event_subject">
+	<div class="col-md-3 help-block" data-helpfor="stakeholder_obs">
 		<div class="text-muted" >
-		{$tooltip events event_subject}
+		{$tooltip stakerholders stakeholder_obs}
 		</div>
 	</div>
 </div>
 </div>
-{END event_subject_fieldblock}
+{END stakeholder_obs_fieldblock}
 
-			{BEGIN event_body_fieldblock}
+			{BEGIN stakeholder_attach_fieldblock}
 <div class=container>
-<div class="form-group" data-fieldname="event_body" data-signal-error-for="event_body{$id}" >
-	<label class="col-md-3 control-label" for="{$labelfor_event_body}">
-		{BEGIN event_body_label}{$label events event_body}{END event_body_label}
+<div class="form-group" data-fieldname="stakeholder_attach" data-signal-error-for="stakeholder_attach{$id}" >
+	<label class="col-md-3 control-label" for="{$labelfor_stakeholder_attach}">
+		{BEGIN stakeholder_attach_label}{$label stakerholders stakeholder_attach}{END stakeholder_attach_label}
 	</label>
 	<div class="col-md-6" >
-		{$event_body_editcontrol}
+		{$stakeholder_attach_editcontrol}
 	</div>
-	<div class="col-md-3 help-block" data-helpfor="event_body">
+	<div class="col-md-3 help-block" data-helpfor="stakeholder_attach">
 		<div class="text-muted" >
-		{$tooltip events event_body}
+		{$tooltip stakerholders stakeholder_attach}
 		</div>
 	</div>
 </div>
 </div>
-{END event_body_fieldblock}
-
-			{BEGIN event_attachments_fieldblock}
-<div class=container>
-<div class="form-group" data-fieldname="event_attachments" data-signal-error-for="event_attachments{$id}" >
-	<label class="col-md-3 control-label" for="{$labelfor_event_attachments}">
-		{BEGIN event_attachments_label}{$label events event_attachments}{END event_attachments_label}
-	</label>
-	<div class="col-md-6" >
-		{$event_attachments_editcontrol}
-	</div>
-	<div class="col-md-3 help-block" data-helpfor="event_attachments">
-		<div class="text-muted" >
-		{$tooltip events event_attachments}
-		</div>
-	</div>
-</div>
-</div>
-{END event_attachments_fieldblock}
+{END stakeholder_attach_fieldblock}
 
 
 </div>
